--- a/style3.css
+++ b/style3.css
@@ -20,3 +20,18 @@ h2+p{
 ul+p{
     color: green;
 }
+input[type="text"]{
+    color: red;
+    background-color:yellow;
+}
+h2{
+    border-width: 4px;
+    border-style: ridge;
+    border-color: indigo;
+
+}
+img{
+    border-color: darkslategray;
+    border-style: dotted;
+    border-width: 6px;
+}
